# 3DLevED

./: CMakeLists.txt  README.md  README.md.txt  REBASE_TEST.md  build.sh  dangerous self replicating script.sh  rebuild.bat  rebuild.sh
archive/: imgui.ini
archive/Maps/: Example.txt  default.txt  eyes.txt  handmade-maze.txt  head.txt  matt.txt  test.txt
archive/shaders/: basic_lit.frag  basic_lit.vert  eyes.frag  eyes.vert  funny.frag  funny.vert  funny1.frag  funny1.vert  funny_party.frag  funny_party.vert  googly-eye.frag  grid.frag  grid.vert  hypno-eye.frag
shaders/: basic.vert  default.frag
src/: .editorCamera.cpp.kate-swp  .editorCamera.h.kate-swp  .mazeGen.cpp.kate-swp  ShapeFactory.cpp  ShapeFactory.h  UI.cpp  UI.h  camera.cpp  camera.h  editorCamera.cpp  editorCamera.h  main.cpp  map.cpp  map.h  mazeGen.cpp  mazeGen.h  mesh.cpp  mesh.h  shader_utility.cpp  shader_utility.h  voxel.cpp  voxel.h  voxelRenderer.cpp  voxelRenderer.h
